@@ -549,7 +549,7 @@ define(<WLT>, <
 	C	          unsigned length, uint8_t *dst,
 	C	          const uint8_t *src)
 	.text
-	ALIGN(4)
+	ALIGN(16)
 PROLOGUE(nettle_serpent_encrypt)
         C save all registers that need to be saved
 	W64_ENTRY(4, 13)
@@ -583,7 +583,7 @@ PROLOGUE(nettle_serpent_encrypt)
 	mov	$-512, CNT
 	jmp	.Lwround_start
 
-	ALIGN(4)
+	ALIGN(16)
 .Lwround_loop:
 	WLT(X0,X1,X2,X3)
 .Lwround_start:
@@ -653,7 +653,7 @@ C parallell.
 	mov	$-512, CNT
 	jmp	.Lround_start
 	
-	ALIGN(4)
+	ALIGN(16)
 .Lround_loop:
 	LT(x0,x1,x2,x3)
 .Lround_start:
