@@ -1,5 +1,9 @@
 2013-04-16  Niels Möller  <nisse@lysator.liu.se>
 
+	* asm.m4 (m4_log2): New macro, similar to the one in gmp.
+	(ALIGN): Changed to take alignment in bytes. Updated all callers,
+	currently used only in x86 and x86_64 files.
+
 	* umac.h (umac32_ctx, umac64_ctx, umac96_ctx, umac128_ctx): Make
 	block count an uint64_t. Reorder some elements to put short values
 	together.
